force-app/main/default/objects/Test_Drive__c/Test_Drive__c.object-meta.xml
<CustomObject>
    <label>Test Drive</label>
    <nameField>
        <displayFormat>TD-{0000}</displayFormat>
        <label>Test Drive ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Drive</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>