force-app/main/default/objects/Test_Drive__c/fields/TestDrive_Customer__c.field-meta.xml
<CustomField>
    <fullName>TestDrive_Customer__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>TestDrive Customer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Test Drive</relationshipLabel>
    <relationshipName>Test_Drive</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>