force-app/main/default/objects/Test_Drive__c/fields/TestDrive_Vehicle__c.field-meta.xml
<CustomField>
    <fullName>TestDrive_Vehicle__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>TestDrive Vehicle</label>
    <referenceTo>Vehicle__c</referenceTo>
    <relationshipLabel>Test Drive</relationshipLabel>
    <relationshipName>Test_Drive</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>